MDEV-31084 assert(waiting) failed in TP_connection_generic::wait_end

buf_flush_wait_flushed(): Correct the logic for registering a wait
around buf_flush_wait() that
commit a091d6ac4e7d2d7873749e685943b3032ccfda57
recently broke. This should be easily repeatable when using a
non-default startup parameter:

	thread-handling=pool-of-threads